--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "change-case": "^2.3.1",
+    "composable-middleware": "^0.3.0",
     "compression": "^1.6.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "express-jwt": "^5.3.0",
     "fb": "^1.0.2",
     "gcloud": "^0.29.0",
     "geolib": "^2.0.22",
