auth0 authentication testing

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gm": "^1.21.1",
     "googleapis": "^18.0.0",
     "joi": "^8.0.4",
+    "jwks-rsa": "^1.2.0",
     "knex": "^0.10.0",
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
