update env sample with aut0 keys

--- a/.env-sample
+++ b/.env-sample
@@ -36,6 +36,11 @@ export GSHEETS_EVENTS='[{"id": "<id>", "city": "<Cityname>"}]'
 export FB_APP_ID=
 export FB_APP_SECRET=
 
+# Auth0
+export AUTH0_CLIENT_ID=
+export AUTH0_DOMAIN=
+export AUTH0_SECRET_KEY=
+
 # In 's' how often posts get +1 baseline hotness score.
 export FEED_INFLATION_INTERVAL=45000
 # January 1st, 2017. Time of 0 baseline hot score.
